# hestia

./: .cursorrules  .gitignore  .kimi-done  .matrix.secrets.example.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UPGRADE.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  SOUL.md.example  example_config.cli.py  example_config.matrix.py  example_config.py  hestia-agent.service  hestia-llama.alt-port.service.example  hestia-llama.service  install.sh
docs/: DECISIONS.md  HANDOFF_STATE.md  Phase-1c-Summary.md  README.md  calibration.json  hestia-design-revised-april-2026.md  runtime-feature-testing.md
docs/adr/: ADR-0001-project-name-is-hestia.md  ADR-0002-package-manager-is-uv.md  ADR-0003-language-is-python-311.md  ADR-0004-persistence-is-sqlalchemy-core-async-with-sqlite-default-postgres-via-url-override.md  ADR-0005-subagents-run-in-the-same-process.md  ADR-0006-search-is-fts-only-at-first.md  ADR-0007-no-web-ui-in-v1.md  ADR-0008-license-is-apache-20.md  ADR-0009-count_request-correction-factor-measured-but-high-variance-superseded.md  ADR-001-project-name-is-hestia.md  ADR-0010-handoff-docs-live-in-docshandoffs-inside-the-repo.md  ADR-0011-calibration-is-two-numbers-body-factor-meta-tool-overhead.md  ADR-0012-turn-state-machine-with-platform-agnostic-confirmation-callback.md  ADR-0013-slotmanager-owns-kv-cache-slot-lifecycle-with-lru-eviction.md  ADR-0014-context-resilience.md  ADR-0015-llama-server-coexistence.md  ADR-0016-telegram-adapter-forces-http11-rate-limits-edits-and-whitelists-users.md  ADR-0018-reflection-loop-architecture.md  ADR-0019-style-profile-vs-identity.md  ADR-002-package-manager-is-uv.md  ADR-0020-cli-decomposition.md  ADR-0021-context-builder-prefix-registry-and-tokenize-cache.md  ADR-0022-skills-preview-feature-flag.md  ADR-0025-identity-compiled-bounded-operator-owned.md  ADR-0026-discord-voice-architecture.md  ADR-0028-hestiaconfig-is-a-typed-python-dataclass-loaded-from-a-python-file.md  ADR-0029-long-term-memory-uses-sqlite-fts5-not-vector-search.md  ADR-003-language-is-python-3-11.md  ADR-0030-subagent-delegation-uses-same-process-different-slot-architecture.md  ADR-0032-typed-failure-bundles.md  ADR-0033-matrix-adapter-with-room-based-session-mapping-and-allowlist.md  ADR-004-persistence-is-sqlalchemy-core-async-with-sqlite-default-postgres-via-url-override.md  ADR-005-subagents-run-in-the-same-process.md  ADR-006-search-is-fts-only-at-first.md  ADR-007-no-web-ui-in-v1.md  ADR-008-license-is-apache-2-0.md  ADR-009-count-request-correction-factor-measured-but-high-variance-superseded.md  ADR-010-handoff-docs-live-in-docs-handoffs-inside-the-repo.md  ADR-011-calibration-is-two-numbers-body-factor-meta-tool-overhead.md  ADR-012-turn-state-machine-with-platform-agnostic-confirmation-callback.md  (+24 more)
docs/design/: brainstorm-april-13.md  hestia-design-revised-april-2026.md  hestia-phase-8-plus-roadmap.md  kimi-hestia-phase-7-cleanup.md  matrix-integration.md
docs/development-process/: README.md  kimi-loop-log.md  kimi-phase-queue.md  mypy-baseline.txt  v0.9.1-progress.md
docs/dogfooding/: discord-voice-husband-onboarding.md
docs/experiments/: telegram-voice-smoke-test.md
docs/guides/: README.md  custom-tools.md  email-setup.md  environment-variables.md  multi-user-setup.md  reflection-tuning.md  (+4 more)
migrations/: README.md  env.py
reviews/: L102-L112-review.md
scripts/: calibrate_token_count.py  force_long_session.py  kimi-run-current.sh  matrix_test_send.py
tests/: __init__.py  conftest.py
web-ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+712 files in other folders)
